# Huffman-Encoding

./: .gitignore  CMakeLists.txt  README.md  decode.cpp  encode.cpp  main.cpp
include/huffman-encoding/: Decoder.hpp  Encoder.hpp  FileWriter.hpp  HuffmanNodes.hpp  HuffmanTree.hpp
inputFiles/: input.txt
outputFiles/: encoded.txt
src/: Decoder.cpp  Encoder.cpp  FileWriter.cpp  HuffmanNode.cpp  HuffmanTree.cpp
tests/: TestEncodingDecoding.cpp
